k8s-shared/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: shared-ingress
  namespace: kube-app
  labels:
    app: shared-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: localhost
    http:
      paths:
      - path: /kube-app
        pathType: Prefix
        backend:
          service:
            name: kube-app-service
            port:
              number: 80
      - path: /kube-app-2
        pathType: Prefix
        backend:
          service:
            name: kube-app-2-service
            port:
              number: 80
